--- a/upload/demoupload/templates/signup.html
+++ b/upload/demoupload/templates/signup.html
@@ -14,6 +14,33 @@
     <h1> Instagram Clone</h1>
     <h3>Sign Up</h3>
     <h4>todays date and time : {{today}}</h4>
+    <form method="post">
+        {% csrf_token %}
+
+
+        <div>
+            <label for="username">Username: </label>
+            <input id="username" type="text" name="username" value="{{username}}">
+        </div>
+
+        <div>
+            <label for="name">Name: </label>
+            <input id="name" type="text" name="name" value="{{name}}">
+        </div>
+
+        <div>
+            <label for="email">Email: </label>
+            <input id="email" type="text" name="email" value="{{email}}">
+        </div>
+
+        <div>
+            <label for="password">Password: </label>
+            <input id="password" type="password" name="password" value="{{password}}">
+        </div>
+            <input type="submit" value="Sign Up">
+    </form>
+
+
 </div>
     <!--javascript files-->
 	<!--jquery libray-->
