--- a/upload/demoupload/templates/signup.html
+++ b/upload/demoupload/templates/signup.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>bootstrap demo</title>
+    <title>Upload images</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--bootstrap-->
 	<link href=" css/bootstrap.css" rel="stylesheet">
 </head>
+
+<style>
+background{color:red;}
+h1
+{
+	font-size=400px;
+    color:Blue;
+    text-align:center;
+    font-style:italic;
+ }
+div
+{
+	text-align:center;
+}
+input
+{
+	color:red;
+	font-weight:bold;
+}
+</style>
 <body>
-<center>
-<div class="main">
-    <h1> Instagram Clone</h1>
-    <h3>Sign Up</h3>
-    <h4>todays date and time : {{today}}</h4>
+<div>
+    <h1> upload</h1>
+    <div>
+        <img src="k.jpeg" align="left" height="500px" width="300px" hspace="100px">
+    </div>
+
     <form method="post">
     {% csrf_token %}
-        
-        
-        <div
+            <div>
             <label for="username">Username: </label>
             <input id="username" type="text" name="username" value="{{username}}">
-        </div>
+            </div>
         <div>
             <label for="name">Name: </label>
             <input id="name" type="text" name="name" value="{{name}}">
@@ -35,20 +54,18 @@
             <input id="password" type="password" name="password" value="{{password}}">
         </div>
             <input type="submit" value="Sign Up"><br><br>
-        <img src="upload\static\images\ab.jpg" align="left">
     </form>
     <form method="get" action="/login/">
-        <button type="submit">login</button>
-
+        Have an account?
+        <input type="submit" value = "login"></input>
     </form>
 </div>
-</center>
-    <!--javascript files-->
-	<!--jquery libray-->
-	<script src="js/jquery-3.2.1.js">
-	</script>
-	<!--bootstrap js library-->
-	<script src="js/bootstrap.js">
-	</script>
+<!--javascript files-->
+<!--jquery libray-->
+<script src="js/jquery-3.2.1.js">
+</script>
+<!--bootstrap js library-->
+<script src="js/bootstrap.js">
+</script>
 </body>
 </html>
