--- a/upload/demoupload/templates/signup.html
+++ b/upload/demoupload/templates/signup.html
@@ -1,71 +1,59 @@
-<!DOCTYPE html>
+<!Doctype html>
+{% load staticfiles %}
 <html>
 <head>
-    <title>Upload images</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--bootstrap-->
-	<link href=" css/bootstrap.css" rel="stylesheet">
-</head>
+      <title>Sign Up</title>
 
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+       <!--Bootstrap-->
+      <link href="css/bootstrap.css" rel="stylesheet">
 <style>
-background{color:red;}
-h1
-{
-	font-size=400px;
-    color:Blue;
-    text-align:center;
-    font-style:italic;
- }
-div
-{
-	text-align:center;
-}
-input
-{
-	color:red;
-	font-weight:bold;
-}
+h1{background-color:#ffff;width:50%;font:vani;size:90px;color:grey;}
+#id1{margin-left:50px;margin-right:25px;height:30px;width:250px;}
+demo{background-color:black;width:30%;height:800px;align:center;}
+.d1{font-style:bold;float:center;font:Times new roman;font-size:20px;background-color:#F5FFFA;color:grey;}
+.div1 {width:500px;height: 200px;padding:30px;border: 1px solide grey;}
+.flex-container{display: -webkit-flex;display: flex;width:400px;height: 250px;background-color:lightgrey;align:center;}
+.flex-item{background-color : pink;width: 100px;height: 500px;margin:10px;align:center;}
 </style>
+</head>
 <body>
-<div>
-    <h1> upload</h1>
-    <div>
-        <img src="k.jpeg" align="left" height="500px" width="300px" hspace="100px">
-    </div>
-
-    <form method="post">
-    {% csrf_token %}
-            <div>
-            <label for="username">Username: </label>
-            <input id="username" type="text" name="username" value="{{username}}">
-            </div>
-        <div>
-            <label for="name">Name: </label>
-            <input id="name" type="text" name="name" value="{{name}}">
+<table align="center"><tbody><tr>
+    <td><img src="/static/images/k.jpeg"align="left" height="500px" width="300px" hspace="100px"></img></td>
+    <td bgcolor="#F5FFFA">
+        <div class="row"align="center"class="flex-container">
+            <div class="col-sm-4 col-sm-offset-4" class="div1"></div>
+            <h1 id="h1">Instagram Clone</h1>
+            <p class="d1" bgcolor="#F5FFFA">Signup to see your photos and vidios <br>from your friends</p><br>
+            <form id="demo"method="POST">
+                {% csrf_token %}<br>
+                <label for="username">USERNAME: </label><br>
+                <input id="username" type="text" name="username" value="{{ username }}"size="50"><br><br>
+                <label for="username">NAME: </label><br>
+                <input id="name" type="text" name="name" value="{{ name }}"size="50"><br><br>
+                <label for="username">EMAIL: </label><br>
+                <input id="email" type="text" name="email" value="{{ email }}"size="50"><br><br>
+                <label for="username">PASSWORD: </label><br>
+                <input id="password" name="password" type="password" value="{{ password }}"size="50"><br><br>
+                <div><input type="submit"value="signup"></div>
+            </form><br><br>
         </div>
-        <div>
-            <label for="email">Email: </label>
-            <input id="email" type="text" name="email" value="{{email}}">
+        <div class="row"align="center" class="flex_container">
+            <div class="col-sm-4 col-sm-offset-4" class="div1"></div>
+            <form method="get" action="/login/">
+                <p class="d1" bgcolor="#F5FFFA">Have an account?</p>
+                <input type="submit" value = "login"></input>
+            </form>
         </div>
-        <div>
-            <label for="password">Password: </label>
-            <input id="password" type="password" name="password" value="{{password}}">
-        </div>
-            <input type="submit" value="Sign Up"><br><br>
-    </form>
-    <form method="get" action="/login/">
-        Have an account?
-        <input type="submit" value = "login"></input>
-    </form>
-</div>
-<!--javascript files-->
-<!--jquery libray-->
-<script src="js/jquery-3.2.1.js">
-</script>
-<!--bootstrap js library-->
-<script src="js/bootstrap.js">
-</script>
-</body>
+    </td></tr>
+</tbody>
+</table>
+      <!--Javascript files-->
+      <!--Jquery library-->
+      <script src="js/jquery-3.2.1.js"></script>
+      <!--Bootstrap js Library-->
+      <script scr="js/bootstrap.js"></script>
+   </body>
 </html>
