--- a/upload/demoupload/templates/feed.html
+++ b/upload/demoupload/templates/feed.html
@@ -1,12 +1,18 @@
+<!DOCTYPE html>
 {% load staticfiles %}
 
-<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<nav> <form method="get" action="/login/">
+    <input type="submit" value = "logout"></input>
+    </form>
+</nav>
+<center>
 <form method="post" action="/post/">
     {% csrf_token %}
     <input type="submit" class="btn-default btn" value="Create Post">
@@ -48,6 +54,8 @@
     {% endfor %}
 </div>
 
+
 {% endfor %}
+</center>
 </body>
 </html>
