--- a/upload/demoupload/templates/logout.html
+++ b/upload/demoupload/templates/logout.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <title>bootstrap demo</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,13 +10,17 @@
 	<link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
 </head>
 <body>
-<center>
-    <form method="POST" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{ form }}
-      <input type="submit" class="btn btn-default" value="Add a picture">
-   </form>
-</center>
+<div class="main">
+    <h1> Instagram Clone</h1>
+    <h3>logout</h3>
+    <form method="post">
+        {% csrf_token %}
+
+       You are logout successfully.
+
+    </form>
+</div>
+
 <!--javascript files-->
 <!--jquery libray-->
 <script src="{% static "js/jquery-3.2.1.js" %}">
@@ -25,6 +28,5 @@
 <!--bootstrap js library-->
 <script src="{% static "js/bootstrap.js" %}">
 </script>
-
 </body>
 </html>
