--- a/upload/demoupload/templates/feed.html
+++ b/upload/demoupload/templates/feed.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 
-
 <html>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+<style>
+    h3{background-color:#ffff;width:50%;font:vani;size:90px;color:grey;}
+    p{background-color:#ffff;width:50%;font:vani;size:90px;color:skyblue;}
+</style>
+
 <body>
-<nav> <form method="get" action="/login/">
-    <input type="submit" value = "logout"></input>
-    </form>
-</nav>
-<center>
-<form method="post" action="/post/">
+<form method="post" action="/logout/" style="float: right;">
     {% csrf_token %}
-    <input type="submit" class="btn-default btn" value="Create Post">
+    <input type="submit" value="Log Out" class="button">
 </form>
 
-{% for post in posts %}
-<h3> Posted by: {{ post.user.username }} </h3>
-<p>[{{ post.created_on }}]</p>
-<img style="display:inline-block; width:350px; height:300px;" src="{{ post.image_url }}" /><br>
-<span  style="display:inline-block;">{{ post.caption }}</span><br/><br/>
-<div style="display:inline-block">
-    {{ post.like_count }} likes this
-</div>
-<div style="display:inline-block">
-    <form method="POST" action="/like/">
+<center>
+    <form method="post" action="/post/">
         {% csrf_token %}
-        <input type="hidden" name="post" value="{{ post.id }}" />
-        {% if post.has_liked %}
-        <input type="submit" class="btn btn-default" value="Unlike">
-        {% else %}
-        <input type="submit" class="btn btn-default" value="Like">
-        {% endif %}
+        <input type="submit" class="btn-default btn" value="Create Post">
     </form>
-</div>
+    <div>
+        {% for post in posts %}
+        <div>
+            <h3> Posted by: {{ post.user.username }} </h3>
+            <p>[{{ post.created_on }}]</p>
+        </div>
+        <div>
+            <img style="display:inline-block; width:350px; height:300px;" src="{{ post.image_url }}" /><br>
+            <span  style="display:inline-block;">{{ post.caption }}</span><br/><br/>
+        </div>
+        <div style="display:inline-block">
+             {{ post.like_count }} likes this
+        </div>
+     </div>
 
-<div>
-    <form method="POST" action="/comment/">
-        {% csrf_token %}
-        <input type="hidden" name="post" value="{{ post.id }}" />
-        <input type="text" name="comment_text" id="comment_text" placeholder="Make a comment.." value="{{ comment_text }}">
-        {{ comment_text }}
-        <input type="submit" class="btn-default btn" value="Comment">
-    </form>
-</div>
+    <div style="display:inline-block">
+        <form method="POST" action="/like/">
+            {% csrf_token %}
+            <input type="hidden" name="post" value="{{ post.id }}" />
+            {% if post.has_liked %}
+            <input type="submit" class="btn btn-default" value="Unlike">
+            {% else %}
+            <input type="submit" class="btn btn-default" value="Like">
+            {% endif %}
+        </form>
+    </div>
 
-<div>
-    {% for comment in post.comments %}
-    <p><b>{{ comment.user.username }} [{{ comment.created_on }}]:</b> {{ comment.comment_text }}</p>
-    {% endfor %}
-</div>
+    <div>
+        <form method="POST" action="/comment/">
+            {% csrf_token %}
+            <input type="hidden" name="post" value="{{ post.id }}" />
+            <input type="text" name="comment_text" id="comment_text" placeholder="Make a comment.." value="{{ comment_text }}">
+            {{ comment_text }}
+            <input type="submit" class="btn-default btn" value="Comment">
+        </form>
+    </div>
+
+    <div>
+        {% for comment in post.comments %}
+        <p><b>{{ comment.user.username }} [{{ comment.created_on }}]:</b> {{ comment.comment_text }}</p>
+        {% endfor %}
+    </div>
 
 
 {% endfor %}
