--- a/upload/demoupload/templates/post.html
+++ b/upload/demoupload/templates/post.html
@@ -1,9 +1,10 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
+
 <html>
 <head>
 
-    <title>bootstrap demo</title>
+    <title>Post</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
