--- a/upload/demoupload/templates/signup.html
+++ b/upload/demoupload/templates/signup.html
@@ -2,13 +2,12 @@
 {% load staticfiles %}
 <html>
 <head>
-      <title>Sign Up</title>
-
-          <meta charset="utf-8">
-          <meta http-equiv="X-UA-Compatible" content="IE=edge">
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-       <!--Bootstrap-->
-      <link href="css/bootstrap.css" rel="stylesheet">
+    <title>Sign Up</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Bootstrap-->
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
 <style>
 h1{background-color:#ffff;width:50%;font:vani;size:90px;color:grey;}
 #id1{margin-left:50px;margin-right:25px;height:30px;width:250px;}
@@ -21,12 +20,12 @@ demo{background-color:black;width:30%;height:800px;align:center;}
 </head>
 <body>
 <table align="center"><tbody><tr>
-    <td><img src="/static/images/k.jpeg"align="left" height="500px" width="300px" hspace="100px"></img></td>
+    <td><img src="/static/images/ab.jpg"align="left" height="500px" width="300px" hspace="100px"></img></td>
     <td bgcolor="#F5FFFA">
         <div class="row"align="center"class="flex-container">
             <div class="col-sm-4 col-sm-offset-4" class="div1"></div>
-            <h1 id="h1">Instagram Clone</h1>
-            <p class="d1" bgcolor="#F5FFFA">Signup to see your photos and vidios <br>from your friends</p><br>
+            <h1 id="h1">upload images</h1>
+            <p class="d1" bgcolor="#F5FFFA">Signup to see your photos and vedios <br>from your friends</p><br>
             <form id="demo"method="POST">
                 {% csrf_token %}<br>
                 <label for="username">USERNAME: </label><br>
@@ -43,8 +42,8 @@ demo{background-color:black;width:30%;height:800px;align:center;}
         <div class="row"align="center" class="flex_container">
             <div class="col-sm-4 col-sm-offset-4" class="div1"></div>
             <form method="get" action="/login/">
-                <p class="d1" bgcolor="#F5FFFA">Have an account?</p>
-                <input type="submit" value = "login"></input>
+                <label for="login">HAVE AN ACCOUNT? </label><br>
+                <input id="login" type="submit" value = "login"></input>
             </form>
         </div>
     </td></tr>
@@ -52,8 +51,10 @@ demo{background-color:black;width:30%;height:800px;align:center;}
 </table>
       <!--Javascript files-->
       <!--Jquery library-->
-      <script src="js/jquery-3.2.1.js"></script>
+<script src="{% static "js/jquery-3.2.1.js" %}">
+</script>
       <!--Bootstrap js Library-->
-      <script scr="js/bootstrap.js"></script>
-   </body>
+<script src="{% static "js/bootstrap.js" %}">
+</script>
+</body>
 </html>
